[gd_scene load_steps=5 format=3 uid="uid://dinyt3g430uc8"]

[ext_resource type="Script" path="res://login/Login.gd" id="1_i1wbo"]
[ext_resource type="Texture2D" uid="uid://c5ue0feld3yfg" path="res://resources/icons/user.png" id="1_nn3l6"]
[ext_resource type="Texture2D" uid="uid://0s3kf1s27ttu" path="res://resources/icons/padlock.png" id="2_m0l5s"]
[ext_resource type="StyleBox" uid="uid://dpjqfwy18vnvc" path="res://login/Login.tres" id="2_p7ehm"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i1wbo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="UsernameHBox" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 4

[node name="UserIcon" type="TextureRect" parent="VBoxContainer/UsernameHBox"]
layout_mode = 2
texture = ExtResource("1_nn3l6")
expand_mode = 2

[node name="Mail" type="LineEdit" parent="VBoxContainer/UsernameHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("2_p7ehm")
theme_override_styles/focus = ExtResource("2_p7ehm")
theme_override_styles/read_only = ExtResource("2_p7ehm")
placeholder_text = "email"

[node name="PasswordHBox" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 4

[node name="LockIcon" type="TextureRect" parent="VBoxContainer/PasswordHBox"]
layout_mode = 2
texture = ExtResource("2_m0l5s")
expand_mode = 2

[node name="Password" type="LineEdit" parent="VBoxContainer/PasswordHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = ExtResource("2_p7ehm")
theme_override_styles/focus = ExtResource("2_p7ehm")
theme_override_styles/read_only = ExtResource("2_p7ehm")
placeholder_text = "password"
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SignInButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Sign in"

[node name="SignUpButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Sign up
"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/SignInButton" to="." method="_on_sign_in_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SignUpButton" to="." method="_on_sign_up_button_pressed"]
